# FaceFind

./: .gitignore  .pre-commit-config.yaml  README.md  apply_predictions.py  config.py  embedding_utils.py  image_analysis.py  main.py  makefile  predict_face.py  pyproject.toml  quality.py  report.py  requirements-dev.txt  requirements.txt  split_clusters.py  train_face_classifier.py  verify_crops.py
data/: people
docs/: ARCHITECTURE.md
examples/: README.md  get_sample_faces.py
facefind/: __init__.py  apply_predictions.py  cli_common.py  config.py  embedding_utils.py  file_exts.py  image_analysis.py  io_schema.py  main.py  predict_face.py  quality.py  report.py  split_clusters.py  train_face_classifier.py  utils.py  verify_crops.py
facefind/gui/: __init__.py  image_grid.py  main_window.py  process_worker.py  qt_app.py  utils.py
gui/: image_grid.py  main_window.py  utils.py
scripts/: sanity_check.sh
tests/: conftest.py  test_apply_predictions.py  test_config.py  test_embedding_utils.py  test_image_analysis_import.py  test_log_level.py  test_main.py  test_main_helpers.py  test_quality.py  test_resource_warnings.py  test_split_clusters.py  test_train_face_classifier.py  test_utils.py
utils/: __init__.py  common.py
